header displayed wrong button, fixed bug of model containing users in loc of errors, fixed front-end mis-alignment

--- a/conference_web/src/main/webapp/static/style/profile-page/profilepage.scss
+++ b/conference_web/src/main/webapp/static/style/profile-page/profilepage.scss
@@ -121,6 +121,9 @@
 				@include flexCenterize;
 
 				@include respond(950px) {
+					display: grid;
+					grid-template-columns: 25% 75%;
+					align-items: center;
 					justify-content: flex-start;
 				}
 			}
@@ -246,7 +249,6 @@
 				padding-bottom: $size-sm;
 				border-right: 2px solid $color-main;
 				display: inline-flex;
-				width: 25%;
 			}
 		}
 	}
